kibbeh/src/styles/globals.css
@import url("https://cdnjs.cloudflare.com/ajax/libs/inter-ui/3.18.0/inter.css");
@import "tailwindcss/base";
@import "tailwindcss/utilities";

h1,
h2,
h3,
h4,
p {
  line-height: 1.6;
}

h1,
h2,
h3,
h4,
p.bold {
  font-weight: 700;
}

:root {
  font-size: 14px;

  --color-button-text: #fff;
  --color-primary-100: #dee3ea;
  --color-primary-200: #b2bdcd;
  --color-primary-300: #5d7290;
  --color-primary-600: #323d4d;
  --color-primary-700: #242c37;
  --color-primary-800: #151a21;
  --color-primary-900: #0b0e11;
  --color-secondary-washed-out: #879eed;
  --color-secondary: #5575e7;
  --color-accent-glow: rgba(253, 77, 77, 0.3);
  --color-accent: #fd4d4d;
  --color-accent-hover: #fd6868;
  --color-accent-disabled: #f5bfbf;
}

h1 {
  font-size: 4rem;
}

h2 {
  font-size: 2.8rem;
}

h3 {
  font-size: 2rem;
}

h4 {
  font-size: 1.4rem;
}

p {
  font-size: 1rem;
  font-weight: 500;
}

p.small {
  font-size: 0.85rem;
}

html
  *:not(head *, script, style, .MuiDialog-root, .MuiDialog-root
    *, .block, .inline-block, .inline, .inline-flex, .table, .table-caption, .table-cell, .table-column, .table-column-group, .table-footer-group, .table-header-group, .table-row-group, .table-row, .flow-root, .grid, .inline-grid, .contents, .hidden, .sm\:hidden, .sm\:flex) {
  display: flex;
}

html,
body,
#__next {
  background-color: var(--color-primary-900);
  height: 100%;
  width: 100%;
}

audio {
  width: 0;
  display: none !important;
}

html {
  position: fixed;
}

#__next {
  overflow: auto;
}

textarea {
  resize: none;
}

#nprogress {
  position: relative;
  z-index: 9999999;
}

img.emoji {
  height: 1em;
  width: 1em;
  margin: 0 0.05em 0 0.1em;
  vertical-align: -0.1em;
}

